--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-scrollspy-nav": "^1.3.0",
     "react-share": "^4.4.1",
     "react-simple-image-viewer": "^1.2.2",
+    "react-speech-recognition": "^4.0.1",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "remixicon-react": "^1.0.0",
@@ -69,6 +70,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.8",
     "@types/react-redux": "^7.1.24",
+    "@types/react-speech-recognition": "^3.9.6",
     "@types/stylis": "^4.0.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
